--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>G3-Architects</title>
     <link rel="stylesheet" href="styles/architect.css">
 </head>
-<body>
+<body class="regular-font">
     <header>
-        
+        <nav class="navbar">
+            <h3 class="brand-name">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
