added navbar responsive

--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <link rel="stylesheet" href="styles/architect.css">
 </head>
 <body class="regular-font">
-    <header>
-        <nav class="navbar">
+    <header class="primary-color">
+        <nav class="navbar disply-flex">
             <h3 class="brand-name">G3 Architects</h3>
+            <ul class="nav-menu disply-flex">                             
+                <li class="nav-menu-item"><a href="#" class="nav-menu-link text-gray">Home</a></li>
+                <li class="nav-menu-item"><a href="#" class="nav-menu-link text-gray">About</a></li>
+                <li class="nav-menu-item"><a href="#" class="nav-menu-link text-gray">Contact Us</a></li>
+                <li class="nav-menu-item"><a href="#" class="nav-menu-link text-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title text-main-color">Brand New Group of Architects</h1>
+                <p class="banner-description text-light-gray">Meet the next generation of visionary architects reshaping the future of design and urban living. With a bold blend of creativity, technical expertise, and modern aesthetics, this dynamic team delivers innovative architectural solutions that balance functionality and beauty. Whether it's sustainable buildings, smart urban planning, or striking commercial spaces — they approach each project with passion, precision, and purpose.</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <div class="image-conatiner">
+                <img class="banner-image" src="images/banner.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
