--- a/index.html
+++ b/index.html
@@ -29,7 +29,23 @@
         </div>
     </header>
     <main>
-
+        <section class="teams disply-flex">
+            <div class="teams-image-container">
+                <img src="images/team1.png" alt="Architect Design Discussion">
+                <img src="images/team2.png" alt="Architect Engineer photo">
+                <img src="images/team3.png" alt="Architect Design Demo">
+                <img src="images/team4.png" alt="Project Done">
+            </div>
+            <div class="our-teams-features">
+                <h3 class="teams-features-title">
+                    <span id="qu-list" class="text-light-gray">Quick list</span> <span class="our text-main-color">Of Our</span><span class="Features"> Features</span>
+                </h3>
+                <p class="team-features-description text-light-gray">
+                    In today’s rapidly evolving world, architecture is no longer just about buildings — it’s about creating experiences, solving environmental challenges, and designing for human well-being. That’s where the Brand New Group of Architects steps in.
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
